Added lsb-release package to bazel-linux-arm64 docker image

--- a/bazel-linux-arm64/Dockerfile
+++ b/bazel-linux-arm64/Dockerfile
@@ -23,7 +23,7 @@ RUN cd bazel;wget https://github.com/koenvervloesem/bazel-on-arm/raw/master/patc
 RUN rm -rf bazel
 
 #Add packages required to build emgu cv
-RUN DEBIAN_FRONTEND="noninterative" apt -y install libopengl-dev
+RUN DEBIAN_FRONTEND="noninterative" apt -y install libopengl-dev libusb-1.0-0-dev freeglut3-dev lsb-release
 
 # Set the Environment Variable for the DOTNET CLI HOME PATH
 ARG dotnet_cli_home_arg=/tmp/
