updated bazel-linux-arm to debian bullseye, dotnet 6 and bazel 4.2.1

--- a/bazel-linux-arm/Dockerfile
+++ b/bazel-linux-arm/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stable
+FROM debian:bullseye-backports
 
 RUN apt update
 RUN apt -y upgrade
@@ -8,25 +8,17 @@ RUN apt -y install curl wget gnupg apt-transport-https python3-numpy python3-pip
 
 #Add dotnet repo
 RUN mkdir -p /usr/local/sbin 
-RUN wget https://download.visualstudio.microsoft.com/download/pr/f456f253-db24-45ea-9c73-f507f93a8cd2/6efe7bed8639344d9c9afb8a46686c99/dotnet-sdk-5.0.302-linux-arm.tar.gz;tar -zxvf dotnet-sdk-5.0.302-linux-arm.tar.gz -C /usr/local/sbin;rm dotnet-sdk-5.0.302-linux-arm.tar.gz
+RUN wget https://download.visualstudio.microsoft.com/download/pr/1f85b038-9917-4d0a-8485-5dc86510eec7/a7555924fe292c6c2140893f066abe65/dotnet-sdk-6.0.100-linux-arm.tar.gz;tar -zxvf dotnet-sdk-6.0.100-linux-arm.tar.gz -C /usr/local/sbin;rm dotnet-sdk-6.0.100-linux-arm.tar.gz
 
 #Build bazel from source 
 RUN mkdir -p bazel
 
 #Download from https://github.com/koenvervloesem/bazel-on-arm/tree/master/patches
-RUN cd bazel;wget https://github.com/koenvervloesem/bazel-on-arm/raw/master/patches/bazel-4.1.0-arm.patch;wget https://github.com/bazelbuild/bazel/releases/download/4.1.0/bazel-4.1.0-dist.zip;unzip bazel-4.1.0-dist.zip;patch -p1 < bazel-4.1.0-arm.patch;env EXTRA_BAZEL_ARGS="--host_javabase=@local_jdk//:jdk" BAZEL_JAVAC_OPTS="-J-Xms384m -J-Xmx800m" JAVA_TOOL_OPTS="-Xmx800m" bash ./compile.sh;cd ..;cp /bazel/output/bazel /usr/local/sbin/
+RUN cd bazel;wget https://github.com/koenvervloesem/bazel-on-arm/raw/master/patches/bazel-4.2.1-arm.patch;wget https://github.com/bazelbuild/bazel/releases/download/4.2.1/bazel-4.2.1-dist.zip;unzip bazel-4.2.1-dist.zip;patch -p1 < bazel-4.2.1-arm.patch;env EXTRA_BAZEL_ARGS="--host_javabase=@local_jdk//:jdk" BAZEL_JAVAC_OPTS="-J-Xms384m -J-Xmx800m" JAVA_TOOL_OPTS="-Xmx800m" bash ./compile.sh;cd ..;cp /bazel/output/bazel /usr/local/sbin/
 
 RUN rm -rf bazel
 
 # Set the Environment Variable for the DOTNET CLI HOME PATH
 ARG dotnet_cli_home_arg=/tmp/
 ENV DOTNET_CLI_HOME=$dotnet_cli_home_arg
-
-#Add debian buster-backports repo
-COPY buster-backports.list /etc/apt/sources.list.d/
-RUN apt update
-
-#Install latest version of CMake from buster-backports
-RUN apt -y install cmake/buster-backports
-
 
