--- a/vs2019_buildtools_cuda_bazel/Dockerfile
+++ b/vs2019_buildtools_cuda_bazel/Dockerfile
@@ -4,4 +4,7 @@
 FROM emgu/vs2019_buildtools_cuda_openvino:openvino_2021.4.582
 
 # Install Bazel
-RUN choco install -y bazel --version 4.1.0
+RUN choco install -y bazel --version 4.2.1
+
+# Install .net 6.0 sdk
+RUN choco install -y dotnet-6.0-sdk 
