Added git to the buildbot image.

--- a/buildbot/Dockerfile
+++ b/buildbot/Dockerfile
@@ -23,5 +23,6 @@ RUN DEBIAN_FRONTEND="noninterative" apt -y install clamav clamav-daemon
 RUN freshclam
 #RUN systemctl start clamav-freshclam
 
-
+#Install git
+RUN DEBIAN_FRONTEND="noninterative" apt -y install git
 
