Use ubuntu 2024.04 for buildbot

--- a/buildbot/Dockerfile
+++ b/buildbot/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:22.04
+FROM ubuntu:24.04
+
+SHELL ["/bin/bash", "-c"]
 
 RUN apt update
 
@@ -6,26 +8,19 @@ RUN apt update
 ENV TZ=America/New_York
 
 #Install Buildbot and apache2
-RUN DEBIAN_FRONTEND="noninterative" apt -y install apache2 python3-buildbot python3-pip
-RUN pip3 install buildbot-www buildbot-waterfall-view buildbot-console-view buildbot-grid-view
+RUN DEBIAN_FRONTEND="noninterative" apt -y install apache2 python3-buildbot python3-pip python3-venv
+RUN python3 -m venv /var/lib/buildbot/venv
+RUN source /var/lib/buildbot/venv/bin/activate && pip3 install buildbot-www buildbot-waterfall-view buildbot-console-view buildbot-grid-view
 
 #Install other tools needed
-RUN DEBIAN_FRONTEND="noninterative" apt -y install zip
-
-RUN mkdir -p /var/lib/buildbot/masters/master/public_html
-RUN ln -s /var/lib/buildbot/masters/master/public_html /var/www/html/buildbot
-
-#Install clamav
-RUN DEBIAN_FRONTEND="noninterative" apt -y install clamav clamav-daemon
+RUN DEBIAN_FRONTEND="noninterative" apt -y install zip git zsh clamav clamav-daemon
 
 #update ClamAV signature database
 #RUN systemctl stop clamav-freshclam
 RUN freshclam
 #RUN systemctl start clamav-freshclam
 
-#Install git
-RUN DEBIAN_FRONTEND="noninterative" apt -y install git
+RUN mkdir -p /var/lib/buildbot/masters/master/public_html
+RUN ln -s /var/lib/buildbot/masters/master/public_html /var/www/html/buildbot
 
-#Install zsh
-RUN DEBIAN_FRONTEND="noninterative" apt -y install zsh
 
